feat: adiciona responsividade e corrige layout

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
+/* Desabilitar o rolar horizontal */
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
+html {
+    scroll-behavior: smooth;
+  }
+  
